refactor: Improve some code using Java 21 features